--- a/readabilityAnalysis.ipynb
+++ b/readabilityAnalysis.ipynb
@@ -2814,7 +2814,7 @@
     "\n",
     "import openai\n",
     "\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"openAIKey\"\n",
     "\n",
     "summarizedTextList = []\n",
     "for index, row in discharge.iterrows():\n",
